second pass at IP info